--- a/150BooksWebScraper/150BooksWebScraper.csproj
+++ b/150BooksWebScraper/150BooksWebScraper.csproj
@@ -9,4 +9,9 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="CsvHelper" Version="33.1.0" />
+      <PackageReference Include="HtmlAgilityPack" Version="1.12.2" />
+    </ItemGroup>
+
 </Project>
